--- a/station/shinjukusanchome.html
+++ b/station/shinjukusanchome.html
@@ -58,17 +58,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_0e6b1df53f0b4a35bed81a5656c3abeb~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0e6b1df53f0b4a35bed81a5656c3abeb~mv2.png" alt="新宿三丁目駅">
           <div class="platform">
             <h2>3番線 -副都心線A線</h2>
-            <p>不思議のワルツ 【未収録】</p>
+            <p>不思議のワルツ</p>
           </div>
-          <!-- <a href="../platform/shinjukusanchome_3.html"></a> -->
+          <a href="../platform/shinjukusanchome_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_0e6b1df53f0b4a35bed81a5656c3abeb~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_0e6b1df53f0b4a35bed81a5656c3abeb~mv2.png" alt="新宿三丁目駅">
           <div class="platform">
             <h2>4番線 -副都心線B線</h2>
-            <p>夢見るハート 【未収録】</p>
+            <p>夢見るハート</p>
           </div>
-          <!-- <a href="../platform/shinjukusanchome_4.html"></a> -->
+          <a href="../platform/shinjukusanchome_4.html"></a>
         </div>       
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e8ba93813526454f890f2fca9fec5a18~mv2.png/v1/fill/w_346,h_346,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e8ba93813526454f890f2fca9fec5a18~mv2.png" alt="新宿三丁目駅">
