--- a/station/meijijingumae.html
+++ b/station/meijijingumae.html
@@ -58,17 +58,17 @@
           <img src="https://static.wixstatic.com/media/0acb38_b8573fe8c55844d681268d0a75a923d2~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_b8573fe8c55844d681268d0a75a923d2~mv2.png" alt="明治神宮前〈原宿〉駅">
           <div class="platform">
             <h2>3番線 -副都心線A線</h2>
-            <p>てんとう虫のステップ 【未収録】</p>
+            <p>てんとう虫のステップ</p>
           </div>
-<!--           <a href="../platform/meijijingumae_3.html"></a> -->
+          <a href="../platform/meijijingumae_3.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_b8573fe8c55844d681268d0a75a923d2~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_b8573fe8c55844d681268d0a75a923d2~mv2.png" alt="明治神宮前〈原宿〉駅">
           <div class="platform">
             <h2>4番線 -副都心線B線</h2>
-            <p>ゆっくり行こう 【未収録】</p>
+            <p>ゆっくり行こう</p>
           </div>
-<!--           <a href="../platform/meijijingumae_4.html"></a> -->
+          <a href="../platform/meijijingumae_4.html"></a>
         </div>
       </div>
   </div>
