--- a/line/seibu_ikebukuro.html
+++ b/line/seibu_ikebukuro.html
@@ -90,8 +90,8 @@
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_e4b65e64e10a4516bbadbecf2a5842c7~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_e4b65e64e10a4516bbadbecf2a5842c7~mv2.png" alt="大泉学園駅">
-          <p>大泉学園駅 【未収録】</p>
-          <!-- <a href="../station/oizumigakuen.html"></a> -->
+          <p>大泉学園駅</p>
+          <a href="../station/oizumigakuen.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_1eb20476a8da480bb67e93e533e21a89~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_1eb20476a8da480bb67e93e533e21a89~mv2.png" alt="保谷駅">
