--- a/station/edogawabashi.html
+++ b/station/edogawabashi.html
@@ -44,7 +44,7 @@
             <h2>1番線 -有楽町線A線</h2>
             <p>星の舞踏会</p>
           </div>
-          <a href="../platform/gokokuji_1.html"></a>
+          <a href="../platform/edogawabashi_1.html"></a>
         </div>
         <div class="column">
           <img src="https://static.wixstatic.com/media/0acb38_16f94deaa28540c99a2ff9e3620bb928~mv2.png/v1/fill/w_365,h_365,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/0acb38_16f94deaa28540c99a2ff9e3620bb928~mv2.png" alt="江戸川橋駅">
@@ -52,7 +52,7 @@
             <h2>2番線 -有楽町線B線</h2>
             <p>風香る駅</p>
           </div>
-          <a href="../platform/gokokuji_2.html"></a>
+          <a href="../platform/edogawabashi_2.html"></a>
         </div>
       </div>
   </div>
